--- a/mrx.html
+++ b/mrx.html
@@ -6,7 +6,7 @@
 
 <title>Teen Patti Gold Pakistan v1.639 APK (Official) – Free Download for Android (AMP)</title>
 
-<meta name="description" content="Download Teen Patti Gold Pakistan v1.639 Official APK for Android. Enjoy smooth, fast, and immersive 3 Patti gameplay with millions of real Pakistani players. 100% safe, verified, and malware-free.">
+<meta name="description" content="Teen Patti Gold Pakistan delivers an authentic 3 Patti experience with rich graphics and exciting features. Download the official v1.639 APK and enjoy classic gameplay - perfect for beginners and pros.">
 <link rel="canonical" href="http://static.sciencemag.org/">
 
 <!-- Open Graph -->
