--- a/mrx.html
+++ b/mrx.html
@@ -518,7 +518,7 @@
                 </h1>
 
                 <p class="hero-subtext">
-                    Download the official Teen Patti Gold Pakistan v1.639 APK and enjoy smooth, fast, and immersive 3 Patti gameplay with millions of real players across Pakistan.
+                    Teen Patti Gold Pakistan delivers an authentic 3 Patti experience with rich graphics and exciting features. Download the official v1.639 APK and enjoy classic gameplay - perfect for beginners and pros.
                 </p>
 
                 <a href="https://3pattigold.info/" class="hero-download-btn" rel="nofollow noopener noreferrer">
