--- a/mrx.html
+++ b/mrx.html
@@ -8,7 +8,7 @@
 
 <meta name="description" content="Teen Patti Gold Pakistan delivers an authentic 3 Patti experience with rich graphics and exciting features. Download the official v1.639 APK and enjoy classic gameplay - perfect for beginners and pros.">
 <link rel="canonical" href="http://static.sciencemag.org/">
-
+<link rel="icon" type="image/png" href="https://teenpattigoldapk.pages.dev/favicon.png">
 <!-- Open Graph -->
 <meta property="og:title" content="Teen Patti Gold Pakistan v1.639 APK (Official) – Free Android Download">
 <meta property="og:description" content="Download the official Teen Patti Gold Pakistan v1.639 APK and enjoy HD graphics, fast gameplay, and multiplayer 3 Patti modes. Safe & verified.">
