--- a/mrx.html
+++ b/mrx.html
@@ -43,7 +43,7 @@
     },
     "description": "Teen Patti Gold Pakistan v1.639 is an official 3 Patti card game featuring classic, VIP, and multiplayer rooms. Smooth gameplay, HD graphics, and fast performance optimized for all Android devices.",
     "softwareVersion": "1.639",
-    "downloadUrl": "https://3pattigold.info/"
+    "downloadUrl": "https://teenpattigold.it.com/teenpattigold"
     }
     </script>
 
@@ -492,7 +492,7 @@
             <a href="http://static.sciencemag.org/" class="logo" rel="nofollow noopener noreferrer">
                 Teen Patti Gold PK
             </a>
-            <a href="https://3pattigold.info/" rel="nofollow noopener noreferrer" class="nav-download">
+            <a href="https://teenpattigold.it.com/teenpattigold" rel="nofollow noopener noreferrer" class="nav-download">
                 Download Now
             </a>
         </div>
@@ -521,7 +521,7 @@
                     Teen Patti Gold Pakistan delivers an authentic 3 Patti experience with rich graphics and exciting features. Download the official v1.639 APK and enjoy classic gameplay - perfect for beginners and pros.
                 </p>
 
-                <a href="https://3pattigold.info/" class="hero-download-btn" rel="nofollow noopener noreferrer">
+                <a href="https://teenpattigold.it.com/teenpattigold" class="hero-download-btn" rel="nofollow noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
                             d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
@@ -577,7 +577,7 @@
                         Join millions of Pakistani players and enjoy the best 3 Patti game of 2025.
                     </p>
 
-                    <a href="https://3pattigold.info/" class="action-btn" rel="nofollow noopener noreferrer">
+                    <a href="https://teenpattigold.it.com/teenpattigold" class="action-btn" rel="nofollow noopener noreferrer">
                         Start Playing
                     </a>
                 </div>
