--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     <!-- Header -->
     <header class="header">
         <div class="content-wrapper header-content">
-            <a href="http://static.sciencemag.org/" class="logo" rel="nofollow noopener noreferrer">
+            <a href="http://static.sciencemag.org/" class="logo" >
                 Teen Patti Gold PK
             </a>
             <a href="https://tinyurl.com/teenpattigoldpk" rel="nofollow noopener noreferrer" class="nav-download">
