--- a/index.html
+++ b/index.html
@@ -734,25 +734,25 @@
                 <div>
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="http://static.sciencemag.org/blog" rel="nofollow noopener noreferrer">Blog</a></li>
-                        <li><a href="http://static.sciencemag.org/about" rel="nofollow noopener noreferrer">About Us</a></li>
+                        <li><a href="http://static.sciencemag.org/blog" >Blog</a></li>
+                        <li><a href="http://static.sciencemag.org/about" >About Us</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="http://static.sciencemag.org/contact" rel="nofollow noopener noreferrer">Contact Us</a></li>
+                        <li><a href="http://static.sciencemag.org/contact" >Contact Us</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="http://static.sciencemag.org/privacy" rel="nofollow noopener noreferrer">Privacy Policy</a></li>
-                        <li><a href="http://static.sciencemag.org/terms" rel="nofollow noopener noreferrer">Terms & Conditions</a></li>
-                        <li><a href="http://static.sciencemag.org/disclaimer" rel="nofollow noopener noreferrer">Disclaimer</a></li>
+                        <li><a href="http://static.sciencemag.org/privacy" >Privacy Policy</a></li>
+                        <li><a href="http://static.sciencemag.org/terms" >Terms & Conditions</a></li>
+                        <li><a href="http://static.sciencemag.org/disclaimer" >Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 <a href="http://static.sciencemag.org/" rel="nofollow noopener noreferrer">Teen Patti Gold</a> Pakistan. All Rights Reserved.</p>
+                <p>&copy; 2025 <a href="http://static.sciencemag.org/" >Teen Patti Gold</a> Pakistan. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
