--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Teen Patti Gold Pakistan v1.639 APK (Official) – Free Download for Android (AMP)</title>
 
 <meta name="description" content="Teen Patti Gold Pakistan delivers an authentic 3 Patti experience with rich graphics and exciting features. Download the official v1.639 APK and enjoy classic gameplay - perfect for beginners and pros.">
-<link rel="canonical" href="http://static.sciencemag.org/">
+<link rel="canonical" href="https://teenpattigold.ac.pk/">
 <link rel="icon" type="image/png" href="https://teenpattigoldapk.pages.dev/favicon.png">
 <!-- Open Graph -->
 <meta property="og:title" content="Teen Patti Gold Pakistan v1.639 APK (Official) – Free Android Download">
@@ -489,7 +489,7 @@
     <!-- Header -->
     <header class="header">
         <div class="content-wrapper header-content">
-            <a href="http://static.sciencemag.org/" class="logo" >
+            <a href="https://teenpattigold.ac.pk/" class="logo" >
                 Teen Patti Gold PK
             </a>
             <a href="https://tinyurl.com/teenpattigoldpk" rel="nofollow noopener noreferrer" class="nav-download">
@@ -734,25 +734,25 @@
                 <div>
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="http://static.sciencemag.org/blog" >Blog</a></li>
-                        <li><a href="http://static.sciencemag.org/about" >About Us</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/blog" >Blog</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/about" >About Us</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="http://static.sciencemag.org/contact" >Contact Us</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/contact" >Contact Us</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="http://static.sciencemag.org/privacy" >Privacy Policy</a></li>
-                        <li><a href="http://static.sciencemag.org/terms" >Terms & Conditions</a></li>
-                        <li><a href="http://static.sciencemag.org/disclaimer" >Disclaimer</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/privacy" >Privacy Policy</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/terms" >Terms & Conditions</a></li>
+                        <li><a href="https://teenpattigold.ac.pk/disclaimer" >Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2025 <a href="http://static.sciencemag.org/" >Teen Patti Gold</a> Pakistan. All Rights Reserved.</p>
+                <p>&copy; 2025 <a href="https://teenpattigold.ac.pk/" >Teen Patti Gold</a> Pakistan. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
